<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation,Typos">Teh Idaman</string>
    <string name="selamat_datang" tools:ignore="MissingTranslation">Selamat Datang</string>
    <string name="image_slider" tools:ignore="MissingTranslation">image slider</string>
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="skip" tools:ignore="MissingTranslation">Skip</string>
    <string name="slider1_description" tools:ignore="MissingTranslation,Typos">Pilih minuman teh kesukanmu dengan berbagai varian rasa dan jadikan hari mu menyenangkan</string>
    <string name="choose_product" tools:ignore="MissingTranslation">Choose Product</string>
    <string name="make_payment" tools:ignore="MissingTranslation">Make Payment</string>
    <string name="slider2_description" tools:ignore="MissingTranslation">Lalukan pembayaran dengan mudah dan cepat serta tidak khawatir uang cashmu akan habis</string>
    <string name="get_your_order" tools:ignore="MissingTranslation">Get Your Order</string>
    <string name="slider3_description" tools:ignore="MissingTranslation,Typos">Pesanan anda hanya datang dan nikmati dengan kesegaran Teh Idaman yang ngalahin teh pucuk</string>
    <string name="next" tools:ignore="MissingTranslation">Next</string>
    <string name="prev" tools:ignore="MissingTranslation">Prev</string>
    <string name="get_started" tools:ignore="MissingTranslation">Get Started</string>
    <string name="welcome" tools:ignore="MissingTranslation">You want\nAuthentic,\nhere you\ngo!</string>
    <string name="find_it" tools:ignore="MissingTranslation">Find it here, buy it now!</string>
    <string name="icon" tools:ignore="MissingTranslation">icon</string>
    <string name="delivery_to" tools:ignore="MissingTranslation">Delivery to</string>
    <string name="select_address" tools:ignore="MissingTranslation">Mau diantar kemana nih??</string>
    <string name="mau_yang_seger_ketik_aja" tools:ignore="MissingTranslation">Mau yang seger? Ketik aja!</string>
    <string name="address" tools:ignore="MissingTranslation">Mau diantar kemana nih??</string>
    <string name="search" tools:ignore="MissingTranslation">Mau yang seger? Ketik aja!</string>
    <string name="category" tools:ignore="MissingTranslation">Category</string>
    <string name="see_all" tools:ignore="MissingTranslation">See all</string>
    <string name="image" tools:ignore="MissingTranslation">image</string>
    <string name="tea_series" tools:ignore="MissingTranslation">Tea Series</string>
    <string name="squash_series" tools:ignore="MissingTranslation">Squash Series</string>
    <string name="thai_series" tools:ignore="MissingTranslation">Thai Series</string>
    <string name="yakult_series" tools:ignore="MissingTranslation">Yakult Series</string>
    <string name="milky_series" tools:ignore="MissingTranslation">Milky Series</string>
    <string name="favorit" tools:ignore="MissingTranslation">Favorit</string>
    <string name="judul_promo" tools:ignore="MissingTranslation">Judul Promo</string>
    <string name="deskripsi_promo" tools:ignore="MissingTranslation">deskripsi promo</string>
    <string name="yuk_coba" tools:ignore="MissingTranslation">Yuk! coba</string>
    <string name="promo_title1" tools:ignore="MissingTranslation">Diskon 5.5 Gila-Gilaan</string>
    <string name="promo_title2" tools:ignore="MissingTranslation">Promo Spesial Pancasila</string>
    <string name="promo_title3" tools:ignore="MissingTranslation">Promo Jum\'at Berkah</string>
    <string name="promo_desc1" tools:ignore="MissingTranslation,TypographyDashes">Berlaku tanggal 05-06 Mei 2025</string>
    <string name="promo_desc2" tools:ignore="MissingTranslation,TypographyDashes">Berlaku tanggal 19-21 Mei 2025</string>
    <string name="promo_desc3" tools:ignore="MissingTranslation">Berlaku setiap hari Jum\'at</string>
    <string name="jasmine_tea" tools:ignore="MissingTranslation">Jasmine Tea</string>
    <string name="rp" tools:ignore="MissingTranslation">Rp.</string>
    <string name="price" tools:ignore="MissingTranslation">2.500</string>
    <string name="stok_ada" tools:ignore="MissingTranslation">Stok ada</string>
    <string name="scroll" tools:ignore="MissingTranslation">scroll</string>
    <string name="closing" tools:ignore="MissingTranslation">Alirkan Kedamaian\nTebarkan Kesejahteraan</string>
    <string name="thai_tea_ori" tools:ignore="MissingTranslation">Thai Tea Ori</string>
    <string name="matcha_creamy" tools:ignore="MissingTranslation">Matcha Creamy</string>
    <string name="choco_oreo" tools:ignore="MissingTranslation">Choco Oreo</string>
    <string name="berry_squash" tools:ignore="MissingTranslation">Berry Squash</string>
    <string name="taro_creamy" tools:ignore="MissingTranslation">Taro Creamy</string>
    <string name="welcome_nback" tools:ignore="MissingTranslation">Welcome\nBack!</string>
    <string name="username_or_email" tools:ignore="MissingTranslation">Username or Email</string>
    <string name="create_an_account" tools:ignore="MissingTranslation">Create an\naccount</string>
    <string name="password" tools:ignore="MissingTranslation">Password</string>
    <string name="confirm_password" tools:ignore="MissingTranslation">Confirm Password</string>
    <string name="eh_kamu_belum_login_nih" tools:ignore="MissingTranslation">Eh Kamu belum Login nih!</string>
    <string name="yuk_login_dulu_biar_bisa_akses_fitur_ini" translatable="false">Yuk login dulu biar bisa akses fitur ini</string>
    <string name="login" tools:ignore="MissingTranslation">Login</string>
    <string name="back" tools:ignore="MissingTranslation">Back</string>
    <string name="welcome_back" tools:ignore="MissingTranslation">Welcome\nBack!</string>
    <string name="forgot_password" tools:ignore="MissingTranslation">Forgot Password?</string>
    <string name="sign_up" tools:ignore="MissingTranslation">Sign Up</string>
    <string name="create_an_account_2" tools:ignore="MissingTranslation">Create An Account</string>
    <string name="add_to_favorite" tools:ignore="MissingTranslation">Add to Favorite</string>
    <string name="favorite" tools:ignore="MissingTranslation">Favorite</string>
    <string name="no_favorit" tools:ignore="MissingTranslation">Belum ada Favorit</string>
    <string name="add_now" tools:ignore="MissingTranslation">Yuk tambahkan sekarang!</string>
    <string name="start_shopping" tools:ignore="MissingTranslation">Start Shopping</string>
    <string name="shop_now" tools:ignore="MissingTranslation">Yuk mulai belanja sekarang!</string>
    <string name="empty_cart" tools:ignore="MissingTranslation">Keranjangmu masih kosong</string>
    <string name="shopping_cart" tools:ignore="MissingTranslation">Shopping Cart</string>
    <string name="my_order" tools:ignore="MissingTranslation">My Order</string>
    <string name="profile" tools:ignore="MissingTranslation">Profile</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="fais_al_qori" tools:ignore="MissingTranslation">Fais Al Qori</string>
    <string name="faisbisa39_gmail_com" tools:ignore="MissingTranslation">faisbisa39@gmail.com</string>
    <string name="dark_mode" tools:ignore="MissingTranslation">Dark Mode</string>
    <string name="edit_profile" tools:ignore="MissingTranslation">Edit Profile</string>
    <string name="change_password" tools:ignore="MissingTranslation">Change Password</string>
    <string name="about_idaman" tools:ignore="MissingTranslation">About Idaman</string>
    <string name="log_out" tools:ignore="MissingTranslation">Log Out</string>
    <string name="chat" tools:ignore="MissingTranslation">Chat</string>
    <string name="cari_chat_dengan_penjual" tools:ignore="MissingTranslation">Cari Chat dengan penjual</string>
    <string name="text_message" tools:ignore="MissingTranslation">text_message</string>
    <string name="store_name" tools:ignore="MissingTranslation">store_name</string>
    <string name="send_time" tools:ignore="MissingTranslation">09.41</string>
    <string name="about_teh_idaman" tools:ignore="MissingTranslation,Typos">About Teh Idaman</string>
    <string name="about_app" tools:ignore="MissingTranslation">About App</string>
    <string name="about_1" tools:ignore="MissingTranslation,Typos">PT Idaman Anak Bangsa berdiri sejak Agustus 2023, merupakan pelopor dan pioneer kemitraan minuman es teh cup jumbo dengan harga Rp2.500 yang berlokasi di Yogyakarta, kami menyediakan jasa kemitraan atau franchise kepada para calon mitra.</string>
    <string name="about_2" tools:ignore="MissingTranslation,Typos"><![CDATA[Produk kemitraan yang kami tawarkan adalah “Teh Idaman” yaitu UMKM yang bergerak di segmen minuman kekinian. Tepat setahun setelah PT Idaman Anak Bangsa berdiri, terdapat lebih dari 200 mitra kami telah tersebar di beberapa provinsi seperti Yogyakarta, Jawa Tengah, Jawa Timur dan Jawa Barat.]]></string>
    <string name="about_3" tools:ignore="MissingTranslation">If you need help or you have any questions, feel free to contact me by email.</string>
    <string name="marketing_tehidaman_gmail_com" tools:ignore="MissingTranslation">marketing.tehidaman@gmail.com</string>
    <string name="email" tools:ignore="MissingTranslation">Email</string>
    <string name="username" tools:ignore="MissingTranslation">Username</string>
    <string name="phone_number" tools:ignore="MissingTranslation">Phone Number</string>
    <string name="log_in" tools:ignore="MissingTranslation">Log In</string>
    <string name="create_account" tools:ignore="MissingTranslation">Create Account</string>
    <string name="personal_details" tools:ignore="MissingTranslation">Personal Details</string>
    <string name="_0895_4026_55123" tools:ignore="MissingTranslation,TypographyDashes">0895-4026-55123</string>
    <string name="message_description" tools:ignore="MissingTranslation,Typos">Pesan sekarang dan rasakan\nnikmatnya Teh Idaman</string>
    <string name="message_title" tools:ignore="MissingTranslation">Belum ada pesanan</string>
    <string name="tea_tarik" tools:ignore="MissingTranslation">Tea Tarik</string>
    <string name="lemon_tea" tools:ignore="MissingTranslation">Lemon Tea</string>
    <string name="grape_tea" tools:ignore="MissingTranslation">Grape Tea</string>
    <string name="strawberry_tea" tools:ignore="MissingTranslation">Strawberry Tea</string>
    <string name="markisa_tea" tools:ignore="MissingTranslation">Markisa Tea</string>
    <string name="lychee_tea" tools:ignore="MissingTranslation">Lychee Tea</string>
    <string name="mango_tea" tools:ignore="MissingTranslation">Mango Tea</string>
    <string name="melon_tea" tools:ignore="MissingTranslation">Melon Tea</string>
    <string name="apple_tea" tools:ignore="MissingTranslation">Apple Tea</string>
    <string name="choco_oreo_creamy" tools:ignore="MissingTranslation">Choco Oreo\nCreamy</string>
    <string name="choco_oreo_creamy2" tools:ignore="MissingTranslation">Choco Oreo Creamy</string>
    <string name="caramel_creamy" tools:ignore="MissingTranslation">Choco Caramel\nCreamy</string>
    <string name="caramel_creamy2" tools:ignore="MissingTranslation">Choco Caramel Creamy</string>
    <string name="avocado_creamy" tools:ignore="MissingTranslation">Avocado Creamy</string>
    <string name="red_velvet_creamy" tools:ignore="MissingTranslation">Red Velvet Creamy</string>
    <string name="strawberry_squash" tools:ignore="MissingTranslation">Strawbery Squash</string>
    <string name="rp_8_000" tools:ignore="MissingTranslation">Rp. 8.000</string>
    <string name="x" tools:ignore="MissingTranslation">x</string>
    <string name="_4" tools:ignore="MissingTranslation">4</string>
    <string name="_32_000" tools:ignore="MissingTranslation">32.000</string>
    <string name="rp_10_000" tools:ignore="MissingTranslation">Rp. 10.000</string>
</resources>