<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/_12sdp"
    android:layout_marginEnd="@dimen/_12sdp"
    android:layout_marginBottom="@dimen/_16sdp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/_8sdp"
            android:layout_height="@dimen/_8sdp"
            android:background="@drawable/rounded"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:backgroundTint="@color/blue_stroke" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strawberry_squash"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/text_green"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/text_main"
            android:layout_marginEnd="@dimen/_3sdp"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/text_main"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/productTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_32_000"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/text_main"
            android:fontFamily="@font/poppins_semi_bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/rp_8_000"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/text_main"
        android:fontFamily="@font/poppins_medium" />





</LinearLayout>