<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background"
      tools:context=".fragmentsLoggedIn.LoggedInHistoryFragment">

      <!-- Judul -->
      <androidx.cardview.widget.CardView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:layout_gravity="top"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/my_order"
          android:textAlignment="center"
          android:textColor="@color/text_main"
          android:textSize="@dimen/_18ssp"
          android:fontFamily="@font/dmsans_semi_bold" />
      </androidx.cardview.widget.CardView>

      <!-- RecyclerView -->
      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderItemsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_46sdp"
        android:padding="16dp"
        android:visibility="gone" />

      <!-- Empty State -->
      <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_46sdp">

        <ImageView
          android:layout_width="@dimen/_130sdp"
          android:layout_height="@dimen/_90sdp"
          android:src="@drawable/order"
          android:contentDescription="@string/image"
          android:layout_marginBottom="@dimen/_32sdp" />

        <TextView
          android:text="@string/message_title"
          android:textSize="@dimen/_18ssp"
          android:textAlignment="center"
          android:textColor="@color/text_main"
          android:fontFamily="@font/dmsans_bold"
          android:layout_marginBottom="@dimen/_12sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

        <TextView
          android:text="@string/message_description"
          android:textSize="@dimen/_14ssp"
          android:textAlignment="center"
          android:textColor="@color/soft_gray"
          android:fontFamily="@font/dmsans_medium"
          android:layout_marginBottom="@dimen/_80sdp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />

        <Button
          android:id="@+id/goShopping"
          android:layout_width="@dimen/_145sdp"
          android:layout_height="@dimen/_44sdp"
          android:text="@string/start_shopping"
          android:textColor="@color/white"
          android:textSize="@dimen/_14ssp"
          android:backgroundTint="@color/green" />
      </LinearLayout>

    </FrameLayout>
