<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/background"
    android:background="@color/background"

    tools:context=".fragmentsLoggedIn.LoggedInFavoriteFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/text_main"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="@font/dmsans_semi_bold" />


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_32sdp"
            android:contentDescription="@string/image"
            android:src="@drawable/bag"
            tools:ignore="ImageContrastCheck" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_cart"
            android:textSize="@dimen/_18ssp"
            android:textAlignment="center"
            android:textColor="@color/text_main"
            android:fontFamily="@font/dmsans_bold"
            android:layout_marginBottom="@dimen/_12sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_80sdp"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/shop_now"
            android:textAlignment="center"
            android:textColor="@color/soft_gray"
            android:textSize="@dimen/_14ssp"
            tools:ignore="TextContrastCheck" />


        <Button
            android:id="@+id/goShopping"
            android:layout_width="@dimen/_145sdp"
            android:layout_height="@dimen/_44sdp"
            android:backgroundTint="@color/green"
            android:text="@string/start_shopping"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:layout_gravity="center"
            tools:ignore="TextContrastCheck,VisualLintButtonSize,VisualLintBounds" />




    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>