<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity">

    <ImageView
        android:contentDescription="@string/image_slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_26ssp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_20sdp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_22sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/find_it"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_medium" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_gravity="center"
            android:text="@string/get_started"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:backgroundTint="@color/start"
            android:textColor="@color/white"
            android:layout_margin="10dp"/>



    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>