<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background"
      tools:context=".fragmentsLoggedIn.LoggedInFavoriteFragment">

      <!-- Judul -->
      <androidx.cardview.widget.CardView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/favorite"
          android:textAlignment="center"
          android:textSize="@dimen/_18ssp"
          android:textColor="@color/text_main"
          android:fontFamily="@font/dmsans_semi_bold" />
      </androidx.cardview.widget.CardView>

      <!-- RecyclerView untuk daftar favorit -->
      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_16sdp"
        android:clipToPadding="false" />

      <!-- Layout kosong saat tidak ada data favorit -->
      <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
          android:layout_width="@dimen/_90sdp"
          android:layout_height="@dimen/_90sdp"
          android:src="@drawable/love"
          android:layout_marginBottom="@dimen/_32sdp"
          android:contentDescription="@string/image" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/no_favorit"
          android:textSize="@dimen/_18ssp"
          android:textColor="@color/text_main"
          android:fontFamily="@font/dmsans_bold"
          android:layout_marginBottom="@dimen/_12sdp" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_now"
          android:textSize="@dimen/_14ssp"
          android:textColor="@color/soft_gray"
          android:fontFamily="@font/dmsans_medium"
          android:layout_marginBottom="@dimen/_32sdp" />

        <Button
          android:id="@+id/goShopping"
          android:layout_width="@dimen/_145sdp"
          android:layout_height="@dimen/_44sdp"
          android:backgroundTint="@color/green"
          android:text="@string/add_to_favorite"
          android:textColor="@color/white"
          android:textSize="@dimen/_14ssp" />
      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
